处理swagger类型
